--- a/files/home/znc/.znc/configs/znc.conf
+++ b/files/home/znc/.znc/configs/znc.conf
@@ -49,6 +49,8 @@ LoadModule = webadmin
 {%     for channel in intersting_channels -%}
 		<Chan {{ channel }}>
 		</Chan>
-{%     end for -%}
+{%     endfor -%}
 	</Network>
 </User>
+{%   endif -%}
+{% endfor -%}
