pass interesting_channels

--- a/files/home/znc/.znc/configs/znc.conf
+++ b/files/home/znc/.znc/configs/znc.conf
@@ -46,7 +46,7 @@ LoadModule = webadmin
 		Server     = {{ server }} +7000
 {%     endfor -%}
 
-{%     for channel in intersting_channels -%}
+{%     for channel in interesting_channels -%}
 		<Chan {{ channel }}>
 		</Chan>
 {%     endfor -%}
