replace tabs with spaces

--- a/files/home/znc/.znc/configs/znc.conf
+++ b/files/home/znc/.znc/configs/znc.conf
@@ -8,10 +8,10 @@
 
 Version = 1.0
 <Listener l>
-	Port = {{ znc_port }}
-	IPv4 = true
-	IPv6 = true
-	SSL = true
+  Port = {{ znc_port }}
+  IPv4 = true
+  IPv6 = true
+  SSL = true
 </Listener>
 LoadModule = partyline
 LoadModule = webadmin
@@ -19,38 +19,35 @@ LoadModule = webadmin
 {% for user, args in users.iteritems() -%}
 {%   if 'znc' in args -%}
 <User {{ user }}>
-	Pass       = {{ args['znc']['Pass'] }}
-    Admin      = {{ 'true' if args['znc']['Admin'] else 'false' }}
-	Nick       = {{ user }}
-	AltNick    = {{ user }}_
-	Ident      = {{ user }}
-	RealName   = {{ args['fullname'] }}
-	Buffer     = 500
-	AutoClearChanBuffer = true
-	ChanModes  = +stn
+  Pass = {{ args['znc']['Pass'] }}
+  Admin = {{ 'true' if args['znc']['Admin'] else 'false' }}
+  Nick = {{ user }}
+  AltNick = {{ user }}_
+  Ident = {{ user }}
+  RealName = {{ args['fullname'] }}
+  Buffer = 500
+  AutoClearChanBuffer = true
+  ChanModes = +stn
 
-	LoadModule = chansaver
-	LoadModule = controlpanel
-	LoadModule = perform
+  LoadModule = chansaver
+  LoadModule = controlpanel
+  LoadModule = perform
 
-
-	<Network freenode>
-		LoadModule = chansaver
-		LoadModule = keepnick
-		LoadModule = kickrejoin
-		LoadModule = nickserv
-		LoadModule = perform
-		LoadModule = simple_away
-
-{%     for server in freenode_servers -%}
-		Server     = {{ server }} +7000
-{%     endfor -%}
-
-{%     for channel in interesting_channels -%}
-		<Chan {{ channel }}>
-		</Chan>
-{%     endfor -%}
-	</Network>
+  <Network freenode>
+    LoadModule = chansaver
+    LoadModule = keepnick
+    LoadModule = kickrejoin
+    LoadModule = nickserv
+    LoadModule = perform
+    LoadModule = simple_away
+{%     for server in freenode_servers %}
+    Server     = {{ server }} +7000
+{%     endfor %}
+{%     for channel in interesting_channels %}
+    <Chan {{ channel }}>
+    </Chan>
+{%     endfor %}
+  </Network>
 </User>
 {%   endif -%}
 {% endfor -%}
