more whitespace fixes

--- a/files/home/znc/.znc/configs/znc.conf
+++ b/files/home/znc/.znc/configs/znc.conf
@@ -41,12 +41,12 @@ LoadModule = webadmin
     LoadModule = perform
     LoadModule = simple_away
 {%     for server in freenode_servers %}
-    Server     = {{ server }} +7000
-{%     endfor %}
+    Server = {{ server }} +7000
+{%-    endfor %}
 {%     for channel in interesting_channels %}
     <Chan {{ channel }}>
     </Chan>
-{%     endfor %}
+{%-    endfor %}
   </Network>
 </User>
 {%   endif -%}
