--- a/files/etc/init/znc.conf
+++ b/files/etc/init/znc.conf
@@ -8,4 +8,4 @@ stop on runlevel [!2345]
 respawn
 respawn limit 10 5
 
-exec /sbin/start-stop-daemon --start --chuid znc --chdir {{ home_dir }} --pidfile {{ pid_file }} --make-pidfile --startas znc
+exec /sbin/start-stop-daemon --start --chuid znc --chdir {{ home_dir }} --pidfile {{ znc_pid }} --make-pidfile --startas znc
