support znc Ident

--- a/files/home/znc/.znc/configs/znc.conf
+++ b/files/home/znc/.znc/configs/znc.conf
@@ -23,7 +23,7 @@ LoadModule = webadmin
   Admin = {{ 'true' if args['znc']['Admin'] else 'false' }}
   Nick = {{ user }}
   AltNick = {{ user }}_
-  Ident = {{ user }}
+  Ident = {{ args['znc']['Ident'] if 'ident' in args['znc'] else user }}
   RealName = {{ args['fullname'] }}
   Buffer = 500
   AutoClearChanBuffer = true
