use password format from running instance

--- a/files/home/znc/.znc/configs/znc.conf
+++ b/files/home/znc/.znc/configs/znc.conf
@@ -19,7 +19,6 @@ LoadModule = webadmin
 {% for user, args in users.iteritems() -%}
 {%   if 'znc' in args -%}
 <User {{ user }}>
-  Pass = {{ args['znc']['Pass'] }}
   Admin = {{ 'true' if args['znc']['Admin'] else 'false' }}
   Nick = {{ user }}
   AltNick = {{ user }}_
@@ -48,6 +47,11 @@ LoadModule = webadmin
     </Chan>
 {%-    endfor %}
   </Network>
+  <Pass password>
+      Hash = {{ args['znc']['password_hash'] }}
+      Method = {{ args['znc']['password_method'] if 'password_method' in args['znc'] else 'SHA256' }}
+      Salt = {{ args['znc']['password_salt'] }}
+   </Pass>
 </User>
 {%   endif -%}
 {% endfor -%}
