support defining networks, servers and channels

--- a/files/home/znc/.znc/configs/znc.conf
+++ b/files/home/znc/.znc/configs/znc.conf
@@ -32,6 +32,7 @@ LoadModule = webadmin
   LoadModule = controlpanel
   LoadModule = perform
 
+{%     for network, channels in args['znc'].get('networks', {}).iteritems() -%}
   <Network freenode>
     LoadModule = chansaver
     LoadModule = keepnick
@@ -39,14 +40,15 @@ LoadModule = webadmin
     LoadModule = nickserv
     LoadModule = perform
     LoadModule = simple_away
-{%     for server in freenode_servers %}
+{%       for server in network_servers.get(network, []) %}
     Server = {{ server }} +7000
-{%-    endfor %}
-{%     for channel in interesting_channels %}
+{%-      endfor %}
+{%       for channel in channels %}
     <Chan {{ channel }}>
     </Chan>
-{%-    endfor %}
+{%-      endfor %}
   </Network>
+{%-    endfor %}
   <Pass password>
       Hash = {{ args['znc']['password_hash'] }}
       Method = {{ args['znc']['password_method'] if 'password_method' in args['znc'] else 'SHA256' }}
